compiler/tools/fpp-check/test/event/bad_throttle_interval_useconds.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/event/bad_throttle_interval_useconds.fpp:5.11
    every {useconds=2000000}
          ^
error: invalid integer value 2000000
useconds must be smaller than 1000000
